k8s/ingress/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    
    # --- CONFIGURAÇÃO GLOBAL DE SAÚDE ---
    # Usamos a raiz '/' e aceitamos 200-404 para forçar o status 'Healthy'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/success-codes: '200-404'
    
    # Isso garante que o caminho /auth seja enviado como / para o pod
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /evaluation
        pathType: Prefix
        backend:
          service:
            name: evaluation-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /flags
        pathType: Prefix
        backend:
          service:
            name: flag-service
            port:
              number: 80
      - path: /targeting
        pathType: Prefix
        backend:
          service:
            name: targeting-service
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana  # Confirma se o nome do serviço no namespace observability é 'grafana'
            port:
              number: 80
